[tool.poetry]
name = "jitproxy"
version = "1.0.0b1"
description = "JIT Lazy-loading Proxies for synch and AIO objects"
readme = "README.md"
authors = ["Austin Howard <austin@tangibleintelligence.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
clearcut = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
